# resume

./: CNAME  LICENSE  _config.yml  about.md  index.md  pyproject.toml  resume.md
_includes/: nav.html
_layouts/: default.html  resume.html
_posts/: 2023-10-02-test-post.md
assets/css/: added.css
